# rest_client

./: pyproject.toml
rest_client/: utilities.py
restclient/: client.py
